--- a/adapter-config.html
+++ b/adapter-config.html
@@ -108,6 +108,14 @@
         </li>
         <li class="pushy-link">
           <a href="#">
+            <div class="menu-img admin-icon"></div>
+            <div>
+              Admin
+            </div>
+          </a>
+        </li>
+        <!-- <li class="pushy-link">
+          <a href="#">
             <div class="menu-img reports-icon"></div>
             <div>
               Reports
@@ -121,7 +129,7 @@
               Analytic
             </div>
           </a>
-        </li>
+        </li> -->
 
         <div class="mobile-menu-bottom">
           <a href="#">
@@ -212,6 +220,17 @@
             </ul>
           </li>
           <li>
+            <div class="menu-img admin-icon"></div>
+            <a href="#">Admin</a>
+            <ul class="header-submenu">
+              <li><a href="#">SubMenu 2</a></li>
+              <li><a href="#">SubMenu 3</a></li>
+              <li><a href="#">SubMenu 4</a></li>
+              <li><a href="#">SubMenu 5</a></li>
+            </ul>
+          </li>
+          <li>
+            <!-- <li>
             <div class="menu-img reports-icon"></div>
             <a href="#">Reports</a>
             <ul class="header-submenu">
@@ -231,12 +250,230 @@
               <li><a href="#">SubMenu 4</a></li>
               <li><a href="#">SubMenu 5</a></li>
             </ul>
-          </li>
+          </li> -->
         </ul>
       </div>
 
       <div class="header-icons">
+
+
         <div class="dropdown">
+          <a href="#" class="dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            <img src="images/notification.svg" />
+            <span class="notification-red-circle">3</span>
+          </a>
+
+          <div class="dropdown-menu notification-dropdow-div" aria-labelledby="dropdownMenuButton">
+            <div class="dropdown-menu1">
+              <div class="head text-light">
+                <div class="row">
+                  <div class="col-lg-12 col-sm-12 col-12">
+                    <span><strong>Notifications (12)</strong></span>
+                    <a href="" class="float-right text-light">View All</a>
+                  </div>
+                </div>
+              </div>
+
+              <ul id="scroll" class="notifi-scroll">
+                <div>
+
+                  <li class="notification-box">
+                    <div class="row-info">
+                      <div class="text-center">
+                        <div class="c-red-notification">&nbsp;</div>
+                        <!-- <img src="/demo/man-profile.jpg" class="w-50 rounded-circle"> -->
+                      </div>
+                      <div class="flex-1">
+                        <strong class="text-info">Amazon Web Services (AWS)</strong>
+                        <div class="subline-text">
+                          Lorem ipsum dolor sit amet, consectetur
+                        </div>
+                      </div>
+                      <div> <small class="">1 hr ago</small></div>
+                    </div>
+                  </li>
+                  <li class="notification-box">
+                    <div class="row-info">
+                      <div class=" text-center">
+                        <div class="c-red-notification">&nbsp;</div>
+                      </div>
+                      <div class="flex-1">
+                        <strong class="text-info">CylancePROTANE</strong>
+                        <div class="subline-text">
+                          Lorem ipsum dolor sit amet, consectetur
+                        </div>
+
+                      </div>
+                      <div> <small class="">5 hr ago</small></div>
+                    </div>
+                  </li>
+                  <li class="notification-box">
+                    <div class="row-info">
+                      <div class="text-center">
+                        <div class="c-red-notification">&nbsp;</div>
+                      </div>
+                      <div class="flex-1">
+                        <strong class="text-info">CrowdStrike Falcon</strong>
+                        <div class="subline-text">
+                          Lorem ipsum dolor sit amet, consectetur
+                        </div>
+                      </div>
+                      <div> <small class="">6 hr ago</small></div>
+                    </div>
+                  </li>
+                  <li class="notification-box notification-box-gray">
+                    <div class="row-info">
+                      <div class="text-center">
+                        <div class="c-gray-notification">&nbsp;</div>
+                      </div>
+                      <div class="flex-1">
+                        <strong class="text-info">CrowdStrike Falcon</strong>
+                        <div class="subline-text">
+                          Lorem ipsum dolor sit amet, consectetur
+                        </div>
+                      </div>
+                      <div> <small class="">6 hr ago</small></div>
+                    </div>
+                  </li>
+                  <li class="notification-box notification-box-gray">
+                    <div class="row-info">
+                      <div class="text-center">
+                        <div class="c-gray-notification">&nbsp;</div>
+                      </div>
+                      <div class="flex-1">
+                        <strong class="text-info">CrowdStrike Falcon</strong>
+                        <div class="subline-text">
+                          Lorem ipsum dolor sit amet, consectetur
+                        </div>
+                      </div>
+                      <div> <small class="">6 hr ago</small></div>
+                    </div>
+                  </li>
+                  <li class="notification-box notification-box-gray">
+                    <div class="row-info">
+                      <div class="text-center">
+                        <div class="c-gray-notification">&nbsp;</div>
+                      </div>
+                      <div class="flex-1">
+                        <strong class="text-info">CrowdStrike Falcon</strong>
+                        <div class="subline-text">
+                          Lorem ipsum dolor sit amet, consectetur
+                        </div>
+                      </div>
+                      <div> <small class="">6 hr ago</small></div>
+                    </div>
+                  </li>
+                  <li class="notification-box notification-box-gray">
+                    <div class="row-info">
+                      <div class="text-center">
+                        <div class="c-gray-notification">&nbsp;</div>
+                      </div>
+                      <div class="flex-1">
+                        <strong class="text-info">CrowdStrike Falcon</strong>
+                        <div class="subline-text">
+                          Lorem ipsum dolor sit amet, consectetur
+                        </div>
+                      </div>
+                      <div> <small class="">6 hr ago</small></div>
+                    </div>
+                  </li>
+                  <li class="notification-box notification-box-gray">
+                    <div class="row-info">
+                      <div class="text-center">
+                        <div class="c-gray-notification">&nbsp;</div>
+                      </div>
+                      <div class="flex-1">
+                        <strong class="text-info">CrowdStrike Falcon</strong>
+                        <div class="subline-text">
+                          Lorem ipsum dolor sit amet, consectetur
+                        </div>
+                      </div>
+                      <div> <small class="">6 hr ago</small></div>
+                    </div>
+                  </li>
+                  <li class="notification-box notification-box-gray">
+                    <div class="row-info">
+                      <div class="text-center">
+                        <div class="c-gray-notification">&nbsp;</div>
+                      </div>
+                      <div class="flex-1">
+                        <strong class="text-info">CrowdStrike Falcon</strong>
+                        <div class="subline-text">
+                          Lorem ipsum dolor sit amet, consectetur
+                        </div>
+                      </div>
+                      <div> <small class="">6 hr ago</small></div>
+                    </div>
+                  </li>
+                  <li class="notification-box notification-box-gray">
+                    <div class="row-info">
+                      <div class="text-center">
+                        <div class="c-gray-notification">&nbsp;</div>
+                      </div>
+                      <div class="flex-1">
+                        <strong class="text-info">CrowdStrike Falcon</strong>
+                        <div class="subline-text">
+                          Lorem ipsum dolor sit amet, consectetur
+                        </div>
+                      </div>
+                      <div> <small class="">6 hr ago</small></div>
+                    </div>
+                  </li>
+                  <li class="notification-box notification-box-gray">
+                    <div class="row-info">
+                      <div class="text-center">
+                        <div class="c-gray-notification">&nbsp;</div>
+                      </div>
+                      <div class="flex-1">
+                        <strong class="text-info">CrowdStrike Falcon</strong>
+                        <div class="subline-text">
+                          Lorem ipsum dolor sit amet, consectetur
+                        </div>
+                      </div>
+                      <div> <small class="">6 hr ago</small></div>
+                    </div>
+                  </li>
+                  <li class="notification-box notification-box-gray">
+                    <div class="row-info">
+                      <div class="text-center">
+                        <div class="c-gray-notification">&nbsp;</div>
+                      </div>
+                      <div class="flex-1">
+                        <strong class="text-info">CrowdStrike Falcon</strong>
+                        <div class="subline-text">
+                          Lorem ipsum dolor sit amet, consectetur
+                        </div>
+                      </div>
+                      <div> <small class="">6 hr ago</small></div>
+                    </div>
+                  </li>
+                  <li class="notification-box notification-box-gray">
+                    <div class="row-info">
+                      <div class="text-center">
+                        <div class="c-gray-notification">&nbsp;</div>
+                      </div>
+                      <div class="flex-1">
+                        <strong class="text-info">CrowdStrike Falcon</strong>
+                        <div class="subline-text">
+                          Lorem ipsum dolor sit amet, consectetur
+                        </div>
+                      </div>
+                      <div> <small class="">6 hr ago</small></div>
+                    </div>
+                  </li>
+                  <br />
+                </div>
+                <!-- <li class="footer bg-dark text-center">
+                        <a href="" class="text-light">View All</a>
+                      </li> -->
+              </ul>
+            </div>
+
+          </div>
+        </div>
+
+        <!-- <div class="dropdown">
           <a href="#" class="dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
             <img src="images/icon_help.svg" />
@@ -258,7 +495,7 @@
             <a class="dropdown-item" href="#">Another action</a>
             <a class="dropdown-item" href="#">Something else here</a>
           </div>
-        </div>
+        </div> -->
 
         <div class="dropdown d-flex">
           <a href="#" class="dropdown-toggle menu-notification" type="button" id="dropdownMenuButton"
@@ -553,10 +790,10 @@
                   </nav>
                   <div class="tab-content" id="nav-tabContent">
                     <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
-                      <div class="inner-tab-content">
+                      <div class="inner-tab-content pl-4 pr-4">
                         <div class="row m-0 connector-config-row">
                           <div class="col-lg-6">
-                            <div class="col-box">
+                            <div class="">
                               <div class="form-group">
                                 <label>Do not fetch device if not seen by source
                                   in last X hours</label>
@@ -589,7 +826,7 @@
                           </div>
 
                           <div class="col-lg-6">
-                            <div class="col-box">
+                            <div class="">
                               <div class="form-group">
                                 <label>Delete device if not fetched from source in
                                   last X hours</label>
@@ -817,7 +1054,7 @@
                     </div>
                   </div>
                   <div class="col text-right mt-4">
-                    <div class="add-edit-connection-bottom-btn mr-4 policy-btns-wrapper">
+                    <div class="add-edit-connection-bottom-btn mr-0 policy-btns-wrapper">
                       <button type="button" class="cancel-btn">
                         Cancel
                       </button>
